--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "antd": "^2.7.4",
     "babel-runtime": "^6.9.2",
+    "crypto": "^0.0.3",
     "dva": "^1.2.1",
+    "qs": "^6.4.0",
     "react": "^15.4.0",
-    "react-dom": "^15.4.0"
+    "react-dom": "^15.4.0",
+    "react-intl": "^2.2.3",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
