--- a/.eslintrc
+++ b/.eslintrc
@@ -2,11 +2,15 @@
   "parser": "babel-eslint",
   "extends": "airbnb",
   "rules": {
+    "react/jsx-space-before-closing":[0],
     "generator-star-spacing": [0],
+    "semi":[0],
+    "no-console":[0],
     "consistent-return": [0],
     "react/forbid-prop-types": [0],
     "react/jsx-filename-extension": [1, { "extensions": [".js"] }],
     "global-require": [1],
+    "react/jsx-closing-bracket-location":[0],
     "import/prefer-default-export": [0],
     "react/jsx-no-bind": [0],
     "react/prop-types": [0],
@@ -22,11 +26,16 @@
     "no-bitwise": [0],
     "no-cond-assign": [0],
     "import/no-unresolved": [0],
-    "require-yield": [1]
+    "require-yield": [1],
+    "react/react-in-jsx-scope": [0],
+    "no-extra-semi": [0]
   },
   "parserOptions": {
     "ecmaFeatures": {
       "experimentalObjectRestSpread": true
     }
+  },
+  "env": {
+    "browser": true
   }
 }
