--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-runtime": "^6.9.2",
     "crypto": "^0.0.3",
     "dva": "^1.2.1",
+    "dva-loading": "^0.2.1",
     "qs": "^6.4.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
@@ -24,6 +25,7 @@
     "babel-eslint": "^7.1.1",
     "babel-plugin-dva-hmr": "^0.3.2",
     "babel-plugin-import": "^1.1.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.9.0",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
